--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.1.3",
+    "bootstrap-vue": "^2.8.0",
     "chart.js": "^2.7.2",
     "quill": "^1.3.6",
     "shards-ui": "^2.1.0",
     "shards-vue": "^1.0.4",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "vue-axios": "^2.1.5",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.1.0",
